--- a/babynophone.App/babynophone.App/Resources/Resource.de.resx
+++ b/babynophone.App/babynophone.App/Resources/Resource.de.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="LabelChooseLabel" xml:space="preserve">
+  <data name="ChooseContactButton" xml:space="preserve">
+    <value>die Kommunikation</value>
+  </data>
+  <data name="PleaseChooseLabel" xml:space="preserve">
     <value>Bitte wählen Sie:</value>
   </data>
 </root>
