--- a/babynophone.App/babynophone.App/Resources/Resource.resx
+++ b/babynophone.App/babynophone.App/Resources/Resource.resx
@@ -120,7 +120,19 @@
   <data name="ChooseContactButton" xml:space="preserve">
     <value>the communication</value>
   </data>
+  <data name="ChooseNoiseLevelButton" xml:space="preserve">
+    <value>noise level</value>
+  </data>
   <data name="PleaseChooseLabel" xml:space="preserve">
     <value>please choose</value>
+  </data>
+  <data name="StartStopButtonStart" xml:space="preserve">
+    <value>start</value>
+  </data>
+  <data name="StartStopButtonStop" xml:space="preserve">
+    <value>stop</value>
+  </data>
+  <data name="YouAreUsingLabel" xml:space="preserve">
+    <value>you are using</value>
   </data>
 </root>
