--- a/babynophone.App/babynophone.App/Resources/Resource.resx
+++ b/babynophone.App/babynophone.App/Resources/Resource.resx
@@ -141,6 +141,9 @@
   <data name="StartStopButtonStop" xml:space="preserve">
     <value>stop</value>
   </data>
+  <data name="UseVideoLabel" xml:space="preserve">
+    <value>enable video</value>
+  </data>
   <data name="YouAreUsingLabel" xml:space="preserve">
     <value>you are using</value>
   </data>
